# spotify2vk

./: .gitignore  LICENSE  README.md  pyproject.toml  spotify.py  vk.py
