[tool.poetry]
name = "spotify2vk"
version = "1.0.0"
description = "Service that helps to transfer music from Spotify"
authors = ["AlanTheKnight <51376126+AlanTheKnight@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
toml = "^0.10.2"
colorama = "^0.4.4"
selenium = "^4.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
